# moexsrc

./: .gitignore  README.md  candles.ipynb  futoi.ipynb  pyproject.toml
src/moexsrc/: __init__.py  _candles.py  _futoi.py  assets.py  dataframes.py  iss_client.py  issclient.py  markets.py  resolver.py  session.py  tickers.py  types.py  utils.py
tests/: conftest.py  test_assets.py  test_candles.py  test_clients.py  test_futoi.py  test_iss_client.py  test_markets.py  test_primitives.py  test_tickers.py
