[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "MOEXSrc"
version = "0.1.0"
description = "MOEXSrc"
readme = "README.md"
authors = [
    { name = "Alesh", email = "alexey.poryadin@xmail.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "ruff",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = [
    "-ra",
    "-q",
]

[tool.pytest_env]
env_files = [".env"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
exclude = ["*.ipynb"]
